Solved problem with multi-line flexbox container large gaps between wrapped items rows.

--- a/object-basics/calculator/styles.css
+++ b/object-basics/calculator/styles.css
@@ -26,6 +26,7 @@ html * {
 
 .calculator .number-buttons {
   display: flex;
+  justify-content: flex-start;
   flex-wrap: wrap;
   gap: 1px;
   border: 1px solid black;
@@ -34,7 +35,13 @@ html * {
 }
 
 .calculator .operator-buttons {
+  display: flex;
+  align-content: flex-start;  /* used instead of align-items for multi-line flex containers */ 
+  flex-wrap: wrap;
+  gap: 1px;
   border: 1px solid black;
+  padding: 10px;
+  width: 210px;
 }
 
 .calculator .button {
